--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,8 @@
 /* Put your CSS here */
 .ember-application {
-    margin: 20px;
+  margin: 20px;
+}
+
+.container .row.attended {
+  background-color: #5cd85c;
 }
